<resources>
    <string name="app_name">Partikel Elementer</string>
    <string name="title_home">Beranda</string>
    <string name="title_news">Berita</string>
    <string name="title_settings">Pengaturan</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="search_hint">Mau belajar apa hari ini?</string>
    <string name="select_news">Pilih Sumber Berita</string>
    <string name="Theory">Teori</string>
    <string name="appearance">Tampilan</string>
    <string name="ChangeLang">Ubah bahasa</string>
    <string name="about">Tentang</string>
    <string name="edit">Ubah Profil</string>
    <string name="see_all">Lihat Semua</string>
    <string name="more">Lebih banyak</string>
    <string name="memory">Soal-soal</string>
    <string name="example">Contoh Soal</string>
    <string name="other_menus">Menu Lain</string>
    <string name="exercise">Pilihan Ganda</string>
    <string name="calc">Kalkulator</string>
    <string name="flashcard">Benar Salah</string>
    <string name="attachment">Lampiran</string>
    <string name="Intro">Pengantar</string>
    <string name="standard_model">Model Standard</string>
    <string name="btn_next">Lanjut</string>
    <string name="btn_back">Kembali</string>
    <string name="login_greetings">Sebelum mulai belajar, perkenalkan dirimu dulu yuk.</string>
    <string name="name">Nama kamu</string>
    <string name="login">Masuk</string>
    <string name="log_out">Keluar</string>
    <string name="erorLogin">Harus terisi</string>
    <string name="login_success">Login Berhasil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="_1_subatomik">1. Partikel Subatomik</string>
    <string name="garis_waktu_penemuan">Garis Waktu Penemuan</string>
    <string name="_2_teori_medan_kuantum">2. Teori Medan Kuantum</string>
    <string name="_3_hadron">3. Hadron</string>
    <string name="_4_lepton">4. Lepton</string>
    <string name="_5_model_standar">5. Model Standard</string>
    <string name="_6_perkembangan_terkini">6. Perkembangan Terkini</string>
    <string name="ukuran_teks">Ukuran teks :</string>
    <string name="kecil">Kecil</string>
    <string name="sedang">Sedang</string>
    <string name="besar">Besar</string>
    <string name="warna_latar">Warna latar :</string>
    <string name="hijau">Hijau</string>
    <string name="coklat">Coklat</string>
    <string name="kuning">Kuning</string>
    <string name="materi">Materi</string>
    <string name="referensi">Referensi</string>
    <string name="cari_tahu">Cari Tahu!</string>
    <string name="tahukah_anda_partikel_apa_n_yang_lebih_mendasar_dari_atom">Tahukah anda, partikel apa \n yang lebih mendasar dari atom?</string>
    <string name="siswa_duduk_dan_sedang_berpikir">Siswa duduk dan sedang berpikir</string>
    <string name="di_dalam_atom">Di Dalam Atom</string>
    <string name="proton_neutron_dan_elektron_mungkin_nmenjadi_yang_pertama_terbesit_ndalam_pikiran_anda">Proton, neutron, dan elektron mungkin \nmenjadi yang pertama terbesit \ndalam pikiran anda</string>
    <string name="model_atom_bohr">Model Atom Bohr</string>
    <string name="partikel_di_dalam_proton">Partikel di dalam proton</string>
    <string name="tahukah_anda">Tahukah Anda?</string>
    <string name="ternyata_masih_ada_partikel_yang_lebih_nmendasar_yang_menyusun_partikel_tadi">Ternyata masih ada partikel yang lebih \nmendasar yang menyusun partikel tadi.</string>
    <string name="sangat_bermanfaat">Sangat Bermanfaat!</string>
    <string name="dengan_mempelajari_ini_kita_bisa_nmengetahui_asal_usul_alam_semesta_lo">Dengan mempelajari ini, kita bisa \nmengetahui asal usul alam semesta lo!</string>
    <string name="penasaran">Penasaran?</string>
    <string name="yuk_pelajari">Yuk, kita pelajari bersama!</string>
    <string name="latar_belakang">latar belakang</string>
    <string name="tuliskan_nama_anda">Tuliskan Nama Anda</string>
    <string name="mulai">Mulai</string>
    <string name="lewati">Lewati</string>
    <string name="GUT">GUT (Grand Unification Theory)</string>
    <string name="TOE">TOE (Theory of Everything)</string>
    <string name="stat_based">Berdasarkan Statistika</string>
    <string name="comp_based">Berdasarkan Penyusunnya</string>
    <string name="gaya_gaya_dasar">Gaya-gaya Dasar</string>
    <string name="statistika">Statistika</string>
    <string name="spin">Spin</string>
    <string name="perkembangan_teori_atom">Perkembangan Teori Atom</string>
    <string name="bagaimana_ini_dimulai">Bagaimana ini dimulai?</string>
    <string name="intro_2">Pendekatan Saintifik</string>
    <string name="intro_3">Model Roti Kismis</string>
    <string name="bullet_3">\n1. Sinar katoda tersusun atas partikel bermuatan negatif \n2. Partikel tersebut harus ada sebagai bagian dari atom, oleh karena massa tiap partikel hanya sekitar 1/2000 massa atom hidrogen \n3. Partikel subatomik ini dapat ditemukan di semua atom</string>
    <string name="contoh_soal">Contoh Soal</string>
    <string name="silahkan_pilih_nomor_untuk_melihat_soal_dan_penyelesaiannya">Silahkan pilih nomor untuk melihat contoh soal dan penyelesaiannya!</string>
    <string name="tampilkan_jawaban">Tampilkan jawaban</string>
    <string name="daftar_pernyataan">Daftar pernyataan</string>
    <string name="about_detail"><b>Fisika partikel elementer</b> menarik untuk dipelajari karena mempelajari fondasi dasar atas semua materi yang ada di alam semesta.\nPengetahuan di bidang fisika partikel elementer memberikan kontribusi bagi manusia untuk mengetahui penyusun materi dan bagaimana cara kerjanya.</string>
    <string name="MuhRamdhan"><b>Muhammad Ramdhan</b>\nPeneliti</string>
    <string name="DrOktova"><b>Dr. Raden Oktova</b>\nPembimbing</string>
    <string name="DetailMuhRamdhan">Lahir di Sleman, 7 Desember 2000, saat ini sedang menempuh kuliah di S1 Pendidikan Fisika Universitas Ahmad Dahlan Yogyakarta. Selain tertarik dengan fisika, peneliti juga mendalami dunia <i>programming</i> khususnya pengembangan aplikasi <i>mobile</i> Android.</string>
    <string name="DetailDrOktova">Lahir di Yogyakarta, 15 Oktober 1961, menempuh studi Fisika S1 dan S2 pada jurusan Fisika FMIPA Universitas Gadjah Mada, Yogyakarta. Menyelesaikan program Doktor dalam bidang fisika nuklir teoritis dengan disertasi berjudul <i>\"Self-consistent β- Decay Calculation on Heavy Deformed Nuclei\"</i> pada Institut für Theoretiche Physik, Universität Hannover, Jerman. Saat ini berstatus dosen negeri Lembaga Layanan Pendidikan Tinggi (LLDIKTI) Wilayah V Yogyakarta yang diperbantukan di Universitas Ahmad Dahlan, Yogyakarta.</string>
    <string name="loremIpsum">Fisika Partikel Elementer Pendidikan Fisika Universitas Ahmad Dahlan Fisika Partikel Elementer Pendidikan Fisika Universitas Ahmad Dahlan Fisika Partikel Elementer Pendidikan Fisika Universitas Ahmad Dahlan Fisika Partikel Elementer Pendidikan Fisika Universitas Ahmad Dahlan Fisika Partikel Elementer Pendidikan Fisika Universitas Ahmad Dahlan</string>
    <string name="tampilan_disclaimer">Pengaturan tampilan berupa ukuran teks dan warna latar <b>hanya</b> berlaku pada tampilan materi</string>
    <string name="detail_buku_krane"><b>Modern Physics</b>\nOleh Kenneth S. Krane\n2012</string>
    <string name="detail_buku_alonso"><b>Fundamental University Physics</b>\nOleh Marcelo Alonso, Edward J. Finn\n2007</string>
    <string name="detail_wiki_elementer"><b>Elementary Particle</b>\nOleh Wikipedia, <i>The Free Encyclopedia</i></string>
    <string name="default_1">Partikel elementer merupakan satu-satunya partikel subatomik</string>
    <string name="default_2">Fermion mematuhi statistika Fermi-Dirac</string>
    <string name="default_3">Gluon berperan sebagai lem antar partikel elementer pada Hadron</string>
    <string name="default_4">LHC singkatan dari Large Hadron Collider</string>
    <string name="default_5">Elektron adalah partikel elementer pertama yang ditemukan</string>
    <string name="default_6">Neutron terdiri atas dua quark up dan satu quark down</string>
    <string name="default_7">Tidak semua partikel memiliki antipartikel</string>
    <string name="default_8">CERN berada di Amerika</string>
    <string name="default_9">Proton terdiri atas partikel yang lebih mendasar</string>
    <string name="default_10">Quark memiliki spin tengahan</string>
    <string name="default_11">Standard Model sudah terbukti benar</string>
    <string name="default_12">GUT singkatan dari Great Unified Theory</string>
    <string name="default_13">TOE singkatan dari Theory of Everything</string>
    <string name="default_14">Atomos berarti tidak dapat dibagi</string>
    <string name="default_15">Pendekatan saintifik perkembangan atom pertama kali dilakukan E.Rutherford</string>
    <string-array name="benarSalah">
        <item>Benar</item>
        <item>Salah</item>
    </string-array>
    <string name="skorAkhir">Skor Akhir:\n<b>%2$d</b></string>
    <string name="petunjuk_1"><b><font color="#0BDA51">Berdoa</font></b> sebelum mengerjakan.</string>
    <string name="petunjuk_2">Total ada <b><font color="#0BDA51">15 soal</font></b> bertipe pilihan ganda dan soal <b><font color="#0BDA51">tampil secara acak</font></b>.</string>
    <string name="petunjuk_3">Durasi pengerjaan <b><font color="#0BDA51">dapat Anda sesuaikan</font></b> melalui tombol <b><font color="#0BDA51">timer hijau</font></b>.</string>
    <string name="petunjuk_4">Anda <b><font color="#0BDA51">tidak bisa</font></b> melompati soal maupun kembali ke soal sebelumnya.</string>
    <string name="petunjuk_5">Tekan tombol <b><font color="#0BDA51">lanjutkan</font></b> untuk menyimpan jawaban dan melanjutkan ke soal berikutnya.</string>
    <string name="m_standar">Pengembangan model standard dilakukan <b><font color="#0BDA51">secara bertahap</font></b> selama paruh kedua abad ke-20 yang dilakukan oleh ilmuwan di seluruh dunia.</string>
    <string name="m_standar2">Model ini <b><font color="#0BDA51">selesai diformulasikan pada pertengahan 1970-an</font></b> setelah quark dikonfirmasi keberadaannya melalui eksperimen. Setelah itu, partikel yang ditemukan terus bertambah, seperti quark top (1995),neutrino tau (2000), dan boson Higgs (2012)<font color="#0096FF">⁽¹⁾</font>.</string>
    <string name="m_standar3">Gambar di atas menunjukkan model standard lengkap dengan berbagai keterangannya. Daftar (ringkasan) lengkap cacah total partikel elementer dalam model standard dapat dilihat pada tabel.</string>
    <string name="m_standar4">Keterangan:</string>
    <string name="m_standar5"><b><font color="#0BDA51">Enam rasa (<i>flavor</i>) quark:</font></b> up, down, bottom, top, strange, dan charm</string>
    <string name="m_standar6"><b><font color="#0BDA51">Enam jenis lepton:</font></b> elektron, neutrino elektron, muon, neutrino muon, tau, dan neutrino tau.</string>
    <string name="m_standar7"><b><font color="#0BDA51">Ada 12 gauge boson (pembawa gaya):</font></b> foton untuk gaya elektromagnetik, tiga boson W dan Z untuk gaya lemah, dan 8 gluon untuk gaya kuat.</string>
    <string name="m_standar8"><b><font color="#0BDA51">Boson higgs</font></b>, boson yang diperlukan untuk memberikan massa pada gauge boson.</string>
    <string name="m_standar_footnote1">(1) Garis waktu penemuan partikel</string>
</resources>