<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="90dp"
    tools:context=".materi.MateriFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/news_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:onClick="goBack"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/nunito_sans_black"
            android:text="@string/materi"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/arrowBack"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            android:orientation="vertical">
            <Button
                android:id="@+id/subatomik"
                style="@style/ButtonGeneral"
                android:layout_marginBottom="5dp"
                android:text="@string/_1_subatomik"
                app:backgroundTint="@color/biru_seken" />

            <Button
                android:id="@+id/TMQ"
                style="@style/ButtonGeneral"
                android:text="@string/_2_teori_medan_kuantum"
                app:backgroundTint="@color/biru_seken"/>

            <Button
                android:id="@+id/hadron"
                style="@style/ButtonGeneral"
                android:text="@string/_3_hadron"
                app:backgroundTint="@color/biru_seken" />

            <Button
                android:id="@+id/lepton"
                style="@style/ButtonGeneral"
                android:text="@string/_4_lepton"
                app:backgroundTint="@color/biru_seken" />

            <Button
                android:id="@+id/model_standar"
                style="@style/ButtonGeneral"
                android:text="@string/_5_model_standar"
                app:backgroundTint="@color/biru_seken" />

            <Button
                android:id="@+id/terkini"
                style="@style/ButtonGeneral"
                android:layout_marginBottom="5dp"
                android:text="@string/_6_perkembangan_terkini"
                app:backgroundTint="@color/biru_seken" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>