<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".asah.BenarSalahActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/news_bg"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_black"
        android:text="@string/flashcard"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/arrowBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/nunito"
        android:justificationMode="inter_word"
        android:text="Menu ini berisi pernyataan benar dan salah, diharapkan pengguna lebih mudah untuk mengingat materi yang sudah dipelajari. Selain daftar yang sudah tersedia secara bawaan, pengguna juga bisa menambahkan pernyataannya sendiri. Oleh karena itu, tidak ada proses penilaian di sini."
        android:textColor="@color/abu"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4" />

    <Button
        android:id="@+id/daftar"
        style="@style/ButtonGeneral"
        android:drawableLeft="@drawable/ic_baseline_format_list_bulleted_24"
        android:text="@string/daftar_pernyataan"
        app:backgroundTint="@color/biru_seken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline" />

    <TextView
        android:id="@+id/example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnMulai"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMulai"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="20dp"
        android:text="@string/mulai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>